@@ -2,6 +2,7 @@ These are short notes for me, not intended to be clear for everyone.
 I will clean up all this when the project reaches a stable state.
 
  * symlinks
+ * speed calculation per file?
  * signal handling (delete incomplete on interrupt)
  * free space check?
  * last but probably most important: DOCUMENTATION! (readme, proper
